# testing_pico_sleep

doc/: video.txt
sleep_programs/sleep_baseline/: CMakeLists.txt  sleep_baseline.c
sleep_programs/sleep_ms/: CMakeLists.txt  sleep_ms.c
